Add icon and command in status bar

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "dojotools",
     "displayName": "Dojo Tools",
     "description": "Dojo Tools",
-    "version": "0.1.0",
-    "publisher": "Jefferson Santos",
+    "version": "0.4.0",
+    "publisher": "jefferson",
     "repository": {
         "url": "https://github.com/mcgyver/dojotools.git",
         "type": "Github"
@@ -11,18 +11,15 @@
     "engines": {
         "vscode": "^1.21.0"
     },
-    "icon": "icon.png",
-        "galleryBanner": {
+    "galleryBanner": {
         "color": "#FF0000",
         "theme": "dark"
     },
     "categories": [
-        "Dojo"
+        "Other"
     ],
     "activationEvents": [
-        "onCommand:extension.startRoundDojo",
-        "onCommand:extension.stopRoundDojo",
-        "onCommand:extension.pauseRoundDojo"
+        "*"
     ],
     "main": "./out/extension",
     "contributes": {
@@ -39,7 +36,15 @@
                 "command": "extension.resetRoundDojo",
                 "title": "Reset Dojo"
             }
-        ]
+        ],
+        "contributes": {
+            "configurationDefaults": {
+                "[dojotools]": {
+                    "time": 300
+                }
+            }
+        }
+        
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
